# wasm-tools

./: Cargo.toml
crates/wasm-compose/src/: encoding.rs
crates/wasm-encoder/: Cargo.toml
crates/wasm-encoder/src/core/: types.rs
crates/wasm-mutate/src/: module.rs
crates/wasm-mutate/src/mutators/: translate.rs
crates/wasm-smith/src/: core.rs
crates/wasm-smith/src/core/: code_builder.rs  encode.rs
crates/wasm-smith/src/core/code_builder/: no_traps.rs
crates/wasm-types/: Cargo.toml
crates/wasm-types/src/: lib.rs
crates/wasmparser/: Cargo.toml
crates/wasmparser/src/readers/core/: types.rs
crates/wast/src/component/: binary.rs
crates/wit-component/src/: gc.rs
